--- a/environment.yaml
+++ b/environment.yaml
@@ -5,140 +5,144 @@ channels:
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - asttokens=3.0.0
-  - attr=2.5.1
-  - blas=2.128
-  - blas-devel=3.9.0
-  - brotli=1.1.0
-  - brotli-bin=1.1.0
-  - bzip2=1.0.8
-  - ca-certificates=2025.1.31
-  - comm=0.2.2
-  - contourpy=1.3.1
-  - cycler=0.12.1
-  - cython=3.0.12
-  - debugpy=1.8.12
-  - decorator=5.1.1
-  - exceptiongroup=1.2.2
-  - executing=2.1.0
-  - fonttools=4.56.0
-  - freetype=2.12.1
-  - importlib-metadata=8.6.1
-  - ipykernel=6.29.5
-  - ipython=8.32.0
-  - jedi=0.19.2
-  - jupyter_client=8.6.3
-  - jupyter_core=5.7.2
-  - keyutils=1.6.1
-  - kiwisolver=1.4.8
-  - krb5=1.21.3
-  - lcms2=2.17
-  - ld_impl_linux-64=2.43
-  - lerc=4.0.0
-  - libblas=3.9.0
-  - libbrotlicommon=1.1.0
-  - libbrotlidec=1.1.0
-  - libbrotlienc=1.1.0
-  - libcap=2.71
-  - libcblas=3.9.0
-  - libdeflate=1.23
-  - libedit=3.1.20250104
-  - libevent=2.1.12
-  - libexpat=2.6.4
-  - libfabric=2.0.0
-  - libfabric1=2.0.0
-  - libffi=3.4.6
-  - libgcc=14.2.0
-  - libgcc-ng=14.2.0
-  - libgcrypt-lib=1.11.0
-  - libgfortran=14.2.0
-  - libgfortran-ng=14.2.0
-  - libgfortran5=14.2.0
-  - libgomp=14.2.0
-  - libgpg-error=1.51
-  - libhwloc=2.11.2
-  - libiconv=1.17
-  - libjpeg-turbo=3.0.3
-  - liblapack=3.9.0
-  - liblapacke=3.9.0
-  - libllvm15=15.0.7
-  - liblzma=5.6.4
-  - liblzma-devel=5.6.4
-  - libnl=3.11.0
-  - libnsl=2.0.1
-  - libopenblas=0.3.28
-  - libpmix=5.0.6
-  - libpng=1.6.46
-  - libsodium=1.0.20
-  - libsqlite=3.48.0
-  - libstdcxx=14.2.0
-  - libstdcxx-ng=14.2.0
-  - libsystemd0=257.2
-  - libtiff=4.7.0
-  - libudev1=257.2
-  - libuuid=2.38.1
-  - libwebp-base=1.5.0
-  - libxcb=1.17.0
-  - libxcrypt=4.4.36
-  - libxml2=2.13.5
-  - libzlib=1.3.1
-  - llvmlite=0.44.0
-  - lz4-c=1.10.0
-  - matplotlib-base=3.10.0
-  - matplotlib-inline=0.1.7
-  - mpi=1.0
-  - mpi4py=4.0.2
-  - munkres=1.1.4
-  - ncurses=6.5
-  - nest-asyncio=1.6.0
-  - numba=0.61.0
-  - numpy=2.1.3
-  - numpy-base=2.1.3
-  - openblas=0.3.28
-  - openjpeg=2.5.3
-  - openmpi=5.0.6
-  - openssl=3.4.1
-  - packaging=24.2
-  - parso=0.8.4
-  - pexpect=4.9.0
-  - pickleshare=0.7.5
-  - pillow=11.1.0
-  - pip=25.0.1
-  - platformdirs=4.3.6
-  - prompt-toolkit=3.0.50
-  - psutil=6.1.1
-  - pthread-stubs=0.4
-  - ptyprocess=0.7.0
-  - pure_eval=0.2.3
-  - pygments=2.19.1
-  - pyparsing=3.2.1
-  - python=3.12.2
-  - python-dateutil=2.9.0post0
-  - python_abi=3.12
-  - pyzmq=26.2.1
-  - qhull=2020.2
-  - rdma-core=56.0
-  - readline=8.2
-  - setuptools=72.1.0
-  - six=1.17.0
-  - stack_data=0.6.3
-  - tk=8.6.13
-  - tornado=6.4.2
-  - traitlets=5.14.3
-  - typing_extensions=4.12.2
-  - tzdata=2025a
-  - ucc=1.3.0
-  - ucx=1.18.0
-  - unicodedata2=16.0.0
-  - wcwidth=0.2.13
-  - wheel=0.45.1
-  - xorg-libxau=1.0.12
-  - xorg-libxdmcp=1.1.5
-  - xz=5.6.4
-  - xz-gpl-tools=5.6.4
-  - xz-tools=5.6.4
-  - zeromq=4.3.5
-  - zipp=3.21.0
-  - zstd=1.5.6
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_gnu
+  - asttokens=3.0.0=pyhd8ed1ab_1
+  - attr=2.5.1=h166bdaf_1
+  - blas=2.128=openblas
+  - blas-devel=3.9.0=28_h1ea3ea9_openblas
+  - brotli=1.1.0=hb9d3cd8_2
+  - brotli-bin=1.1.0=hb9d3cd8_2
+  - bzip2=1.0.8=h5eee18b_6
+  - ca-certificates=2025.1.31=hbcca054_0
+  - comm=0.2.2=pyhd8ed1ab_1
+  - contourpy=1.3.1=py312hdb19cb5_0
+  - cycler=0.12.1=pyhd8ed1ab_1
+  - cython=3.0.12=py312h2614dfc_0
+  - debugpy=1.8.12=py312h2ec8cdc_0
+  - decorator=5.1.1=pyhd3eb1b0_0
+  - exceptiongroup=1.2.2=pyhd8ed1ab_1
+  - executing=2.1.0=pyhd8ed1ab_1
+  - fonttools=4.56.0=py312h178313f_0
+  - freetype=2.12.1=h267a509_2
+  - importlib-metadata=8.6.1=pyha770c72_0
+  - ipykernel=6.29.5=py312h06a4308_1
+  - ipython=8.32.0=pyh907856f_0
+  - jedi=0.19.2=py312h06a4308_0
+  - jupyter_client=8.6.3=py312h06a4308_0
+  - jupyter_core=5.7.2=py312h06a4308_0
+  - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.8=py312h6a678d5_0
+  - krb5=1.21.3=h143b758_0
+  - lcms2=2.17=h717163a_0
+  - ld_impl_linux-64=2.43=h712a8e2_2
+  - lerc=4.0.0=h6a678d5_0
+  - libblas=3.9.0=28_h59b9bed_openblas
+  - libbrotlicommon=1.1.0=hb9d3cd8_2
+  - libbrotlidec=1.1.0=hb9d3cd8_2
+  - libbrotlienc=1.1.0=hb9d3cd8_2
+  - libcap=2.71=h39aace5_0
+  - libcblas=3.9.0=28_he106b2a_openblas
+  - libdeflate=1.23=h4ddbbb0_0
+  - libedit=3.1.20250104=pl5321h7949ede_0
+  - libevent=2.1.12=hdbd6064_1
+  - libexpat=2.6.4=h5888daf_0
+  - libfabric=2.0.0=ha770c72_1
+  - libfabric1=2.0.0=h14e6f36_1
+  - libffi=3.4.6=h2dba641_0
+  - libgcc=14.2.0=h77fa898_1
+  - libgcc-ng=14.2.0=h69a702a_1
+  - libgcrypt-lib=1.11.0=hb9d3cd8_2
+  - libgfortran=14.2.0=h69a702a_1
+  - libgfortran-ng=14.2.0=h69a702a_1
+  - libgfortran5=14.2.0=hd5240d6_1
+  - libgomp=14.2.0=h77fa898_1
+  - libgpg-error=1.51=h5eee18b_0
+  - libhwloc=2.11.2=default_h0d58e46_1001
+  - libiconv=1.17=hd590300_2
+  - libjpeg-turbo=3.0.3=h5eee18b_0
+  - liblapack=3.9.0=28_h7ac8fdf_openblas
+  - liblapacke=3.9.0=28_he2f377e_openblas
+  - libllvm15=15.0.7=hb3ce162_4
+  - liblzma=5.6.4=hb9d3cd8_0
+  - liblzma-devel=5.6.4=hb9d3cd8_0
+  - libnl=3.11.0=hb9d3cd8_0
+  - libnsl=2.0.1=hd590300_0
+  - libopenblas=0.3.28=pthreads_h94d23a6_1
+  - libpmix=5.0.6=h658e747_0
+  - libpng=1.6.46=h943b412_0
+  - libsodium=1.0.20=h4ab18f5_0
+  - libsqlite=3.48.0=hee588c1_1
+  - libstdcxx=14.2.0=hc0a3c3a_1
+  - libstdcxx-ng=14.2.0=h4852527_1
+  - libsystemd0=257.2=h3dc2cb9_0
+  - libtiff=4.7.0=hd9ff511_3
+  - libudev1=257.2=h9a4d06a_0
+  - libuuid=2.38.1=h0b41bf4_0
+  - libwebp-base=1.5.0=h851e524_0
+  - libxcb=1.17.0=h8a09558_0
+  - libxcrypt=4.4.36=hd590300_1
+  - libxml2=2.13.5=h0d44e9d_1
+  - libzlib=1.3.1=hb9d3cd8_2
+  - llvmlite=0.44.0=py312h6a678d5_0
+  - lz4-c=1.10.0=h5888daf_1
+  - matplotlib-base=3.10.0=py312hbfdbfaf_0
+  - matplotlib-inline=0.1.7=pyhd8ed1ab_1
+  - mpi=1.0=openmpi
+  - mpi4py=4.0.2=py312h5ca6011_0
+  - munkres=1.1.4=py_0
+  - ncurses=6.5=h2d0b736_3
+  - nest-asyncio=1.6.0=py312h06a4308_0
+  - numba=0.61.0=py312h2e6246c_1
+  - numpy=2.1.3=py312h2809609_0
+  - numpy-base=2.1.3=py312he1a6c75_0
+  - openblas=0.3.28=pthreads_h6ec200e_1
+  - openjpeg=2.5.3=h5fbd93e_0
+  - openmpi=5.0.6=hb85ec53_102
+  - openssl=3.4.1=h7b32b05_0
+  - packaging=24.2=py312h06a4308_0
+  - pandas=2.2.3=py312hf9745cd_1
+  - parso=0.8.4=py312h06a4308_0
+  - pexpect=4.9.0=pyhd8ed1ab_1
+  - pickleshare=0.7.5=pyhd3eb1b0_1003
+  - pillow=11.1.0=py312h80c1187_0
+  - pip=25.0.1=pyh8b19718_0
+  - platformdirs=4.3.6=pyhd8ed1ab_1
+  - prompt-toolkit=3.0.50=pyha770c72_0
+  - psutil=6.1.1=py312h66e93f0_0
+  - pthread-stubs=0.4=hb9d3cd8_1002
+  - ptyprocess=0.7.0=pyhd3eb1b0_2
+  - pure_eval=0.2.3=pyhd8ed1ab_1
+  - pygments=2.19.1=pyhd8ed1ab_0
+  - pyparsing=3.2.1=pyhd8ed1ab_0
+  - python=3.12.2=hab00c5b_0_cpython
+  - python-dateutil=2.9.0post0=py312h06a4308_2
+  - python-tzdata=2025.1=pyhd8ed1ab_0
+  - python_abi=3.12=5_cp312
+  - pytz=2024.1=pyhd8ed1ab_0
+  - pyzmq=26.2.1=py312hbf22597_0
+  - qhull=2020.2=hdb19cb5_2
+  - rdma-core=56.0=h5888daf_0
+  - readline=8.2=h5eee18b_0
+  - setuptools=72.1.0=py312h06a4308_0
+  - six=1.17.0=pyhd8ed1ab_0
+  - stack_data=0.6.3=pyhd8ed1ab_1
+  - tabulate=0.9.0=pyhd8ed1ab_2
+  - tk=8.6.13=noxft_h4845f30_101
+  - tornado=6.4.2=py312h5eee18b_0
+  - traitlets=5.14.3=py312h06a4308_0
+  - typing_extensions=4.12.2=py312h06a4308_0
+  - tzdata=2025a=h04d1e81_0
+  - ucc=1.3.0=h2b97398_4
+  - ucx=1.18.0=hfd9a62f_1
+  - unicodedata2=16.0.0=py312h66e93f0_0
+  - wcwidth=0.2.13=pyhd8ed1ab_1
+  - wheel=0.45.1=py312h06a4308_0
+  - xorg-libxau=1.0.12=hb9d3cd8_0
+  - xorg-libxdmcp=1.1.5=hb9d3cd8_0
+  - xz=5.6.4=hbcc6ac9_0
+  - xz-gpl-tools=5.6.4=hbcc6ac9_0
+  - xz-tools=5.6.4=hb9d3cd8_0
+  - zeromq=4.3.5=h3b0a872_7
+  - zipp=3.21.0=py312h06a4308_0
+  - zstd=1.5.6=ha6fb4c9_0
