--- a/environment.yaml
+++ b/environment.yaml
@@ -124,6 +124,7 @@ dependencies:
   - qhull=2020.2=hdb19cb5_2
   - rdma-core=56.0=h5888daf_0
   - readline=8.2=h5eee18b_0
+  - scipy=1.15.2=py312ha707e6e_0
   - setuptools=72.1.0=py312h06a4308_0
   - six=1.17.0=pyhd8ed1ab_0
   - stack_data=0.6.3=pyhd8ed1ab_1
